# Common

./: .gitignore  CMakeLists.txt  Common.cpp  Common.h  Common.sln  Common.vcxproj  Common.vcxproj.filters  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  README.md  Socket.cpp  Socket.h  Text.cpp  Text.h  WinTool.cpp  WinTool.h  build.bat  build_x64.bat  common.cmake
Common/: Common.vcxproj  Common.vcxproj.filters  ConfigIni.cpp  FileSystem.cpp  HttpClient.cpp  HttpUtility.cpp  JsonCpp.cpp  Log.cpp  Text.cpp  Time.hpp  WebClient.cpp  WebClient.h  WinTool.cpp  main.cpp  os.h
Common/include/: Common.h  ConfigIni.h  FileSystem.h  HttpClient.h  HttpUtility.h  JsonCpp.h  Log.h  Md5.h  MySqlClient.hpp  OrcaleClient.hpp  QrCode.hpp  QrenCode.hpp  SafeConfig.h  Socket.hpp  Text.h  Thread.hpp  ThreadPool.hpp  Time.hpp  UnZiper.h  WebClient.h  WinTool.h  Ziper.h  os.h
Common/include/json/: value.h
Common/include/qrcode/: qrencode.h
Common/lib/: json_lib.lib  json_libd.lib  libqrencode_d.lib
Common/sources/: ConfigIni.cpp  FileSystem.cpp  HttpClient.cpp  HttpUtility.cpp  JsonCpp.cpp  JsonValue.cpp  Log.cpp  Md5.cpp  SafeConfig.cpp  Text.cpp  Time.cpp  Util.cpp  WebClient.cpp  WinTool.cpp  main.cpp
ProcessWatcher/: main.cpp
RegisterLicenser/: main.cpp
demo/: CMakeLists.txt
demo/DiskCleaner/: main.cpp
demo/HttpServer/: main.cpp  main.h
demo/ProcessWatcher/: main.cpp
demo/RegisterLicenser/: main.cpp
demo/test/: main.cpp  test.cpp  test.h
include/: Chat.hpp  Common.h  ConfigIni.h  DateTime.h  FileSystem.h  IniConfig.h  JsonCpp.hpp  JsonValue.h  Log.h  Map.hpp  MySqlClient.hpp  OrcaleClient.hpp  QrenCode.hpp  Random.hpp  Regedit.hpp  Socket.h  SqliteClient.h  Text.h  ThreadPool.hpp  Time.hpp  UnZiper.h  Util.h  WebClient.h  WinTool.h  Ziper.h  fmt.hpp  httplib.h  zconf.h
include/json/: value.h
lib/: CommonD.idb  CommonD.lib  Common_D.idb  fmt.lib  zlibstatic.lib  zlibstaticd.lib
lib/X64/: fmt.lib  libqrencode.lib  libqrencode_d.lib
lib/jsoncpp/Release/: jsoncpp.lib
lib/x64/: jsoncpp.lib
lib/x86/: fmtd.lib  libqrencode.lib  zlib.lib
sources/: ConfigIni.cpp  DateTime.cpp  FileSystem.cpp  IniConfig.cpp  JsonValue.cpp  Log.cpp  Socket.cpp  SqliteClient.cpp  Text.cpp  UnZiper.cpp  Util.cpp  WebClient.cpp  WinTool.cpp  Ziper.cpp
test/: main.cpp
